[workspace]
members = [
  "crates/tate-core",
  "crates/tate-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["smart-fuzzy-finder contributors"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ignore = "0.4"
rustc-hash = "1"
tempfile = "3"
