[package]
name = "smart-fuzzy-finder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "smart-fuzzy-finder"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-fuzzy-finder-core = { path = "../tate-core" }
