[package]
name = "smart-fuzzy-finder-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
ignore.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
